2005-09-27  Joerg Wunsch <j@uriah.heep.sax.de>

	* doc/avrdude.texi: Polish up the docs a bit.  Use smallexample
	instead of example for wide tty output.  Document a trick to
	find out about the serial numbers of all JTAG ICEs attached
	to USB.

2005-09-26  Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_paged_write): default the page size early so the
	buffer will be allocated correctly.
	* usb_libusb.c: fix libusb handling; now it works with libusb-win32 as
	well.

2005-09-21  Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c(do_op): use mem->desc in place of upd->memtype to
	give the full name of the respective memory area, instead of
	the (possibly abbreviated) name the user typed in the -U option.

2005-09-21  Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Add the forgotten -B option to the option string in
	getopt(); sort the -s option into order.

2005/09/21  Brian S. Dean  <bsd@bsdhome.com>

	* avr.c:
	* main.c:
	* safemode.c:
	* safemode.h:
	* term.h:
	  This is Colin O'Flynn's mega patch for updating safemode support:
	  
	  * add support for parts with just 'fuse' memory
	  
	  * if any fuse memories are altered, reflect those changes in the
	  post-programming safemode check so that safemode no longer
	  complains about fuses which were intentionally altered; this
	  eliminates the need to completely disable safemode using -u in
	  order to program fuses.
	  
	  * provide -s option which will not ask to restore fuses, it will
	  just do it

2005-09-19  Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c (butterfly_initialize): make the device code unsigned so
	it wouldn't sign-extend when >= 0x80.

2005-09-18  Joerg Wunsch <j@uriah.heep.sax.de>

	Add the serial bit-bang driver, contributed by Michael Holzt.
	* bitbang.h: New file.
	* bitbang.c: New file.
	* serbb.h: New file.
	* serbb_posix.c: New file.
	* serbb_win32.c: New file.
	* Makefile.am: Include new files.
	* config_gram.y: Add serbb to configuration language.
	* lexer.l: (Ditto.)